objects/Partner_profiling__c.object
<CustomObject>
    <description>Table used to describe the profiling of the prospective partner leads (selling solutions...)</description>
    <fields>
        <fullName>Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accreditation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_segment__c</fullName>
        <label>Customer segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyCreatedBy__c</fullName>
        <label>LegacyCreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <label>LegacyCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedBy__c</fullName>
        <label>LegacyLastModifiedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedDate__c</fullName>
        <label>LegacyLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3COM</fullName>
                </value>
                <value>
                    <fullName>AASTRA MATRA Telecom</fullName>
                </value>
                <value>
                    <fullName>ABELTRONICA</fullName>
                </value>
                <value>
                    <fullName>ACCENTURE</fullName>
                </value>
                <value>
                    <fullName>ACCTON</fullName>
                </value>
                <value>
                    <fullName>ADTRAN</fullName>
                </value>
                <value>
                    <fullName>ADVA</fullName>
                </value>
                <value>
                    <fullName>AFROX</fullName>
                </value>
                <value>
                    <fullName>ALCATEL</fullName>
                </value>
                <value>
                    <fullName>ALCATEL-LUCENT</fullName>
                </value>
                <value>
                    <fullName>ALLIED TELESYN</fullName>
                </value>
                <value>
                    <fullName>ALVARION</fullName>
                </value>
                <value>
                    <fullName>ANDREWS</fullName>
                </value>
                <value>
                    <fullName>APPLE</fullName>
                </value>
                <value>
                    <fullName>ARISTEL</fullName>
                </value>
                <value>
                    <fullName>ARTISOFT</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>ASCEND</fullName>
                </value>
                <value>
                    <fullName>ASCOM</fullName>
                </value>
                <value>
                    <fullName>ASD</fullName>
                </value>
                <value>
                    <fullName>ASYNC SWITCH</fullName>
                </value>
                <value>
                    <fullName>AT &amp; T</fullName>
                </value>
                <value>
                    <fullName>ATOS Origin</fullName>
                </value>
                <value>
                    <fullName>AVAYA</fullName>
                </value>
                <value>
                    <fullName>AVM</fullName>
                </value>
                <value>
                    <fullName>BELGACOM</fullName>
                </value>
                <value>
                    <fullName>BIOTRONIC</fullName>
                </value>
                <value>
                    <fullName>BOSCH</fullName>
                </value>
                <value>
                    <fullName>CALYPSO</fullName>
                </value>
                <value>
                    <fullName>CAROL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_distributor__c</fullName>
        <label>Master distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACR CENTRE</fullName>
                </value>
                <value>
                    <fullName>ACR DISTRIBUTION</fullName>
                </value>
                <value>
                    <fullName>ACTEBIS</fullName>
                </value>
                <value>
                    <fullName>AZLAN</fullName>
                </value>
                <value>
                    <fullName>COMSTOR</fullName>
                </value>
                <value>
                    <fullName>DREAMTECH</fullName>
                </value>
                <value>
                    <fullName>IMMOTIQUE</fullName>
                </value>
                <value>
                    <fullName>INDIS RESEAUX</fullName>
                </value>
                <value>
                    <fullName>INGRAM</fullName>
                </value>
                <value>
                    <fullName>IP VISTA</fullName>
                </value>
                <value>
                    <fullName>MGCE</fullName>
                </value>
                <value>
                    <fullName>PRIMO</fullName>
                </value>
                <value>
                    <fullName>RENEST</fullName>
                </value>
                <value>
                    <fullName>SODECPA</fullName>
                </value>
                <value>
                    <fullName>TECHDATA</fullName>
                </value>
                <value>
                    <fullName>WESTCON</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>NO ANSWER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner profilings</relationshipLabel>
        <relationshipName>Partner_profilings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospective_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospective Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Enterprise - Prospective Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner profilings</relationshipLabel>
        <relationshipName>Partner_profilings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_type__c</fullName>
        <label>Solution type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Data - Router</fullName>
                </value>
                <value>
                    <fullName>Data - Switching</fullName>
                </value>
                <value>
                    <fullName>Data - Wifi</fullName>
                </value>
                <value>
                    <fullName>IP Telephony</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Other applications</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Wifi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner profiling</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>Partner profiling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner profilings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>